compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__const_invalid_record_constructor.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1357
expression: "\ntype A {\n    A(String, Int)\n}\nconst a = A(\"a\", let)\n"
snapshot_kind: text
---
----- SOURCE CODE

type A {
    A(String, Int)
}
const a = A("a", let)


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:5:18
  │
5 │ const a = A("a", let)
  │                  ^^^ I was not expecting this

Found the keyword `let`, expected one of: 
- `)`
- a constant record argument
